Added new functionality for working with local data of the regional database.(Update info from table Sybase.gai.arest to Postgres.rsc1840.arest)  15.04.2023

--- a/src/main/resources/templates/karta/test.html
+++ b/src/main/resources/templates/karta/test.html
@@ -31,7 +31,11 @@
     </tr>
     <tr th:each="dataSnaSybase:${dataSnaSybase}">
         <td id="col2"><a th:text="${dataSnaSybase}"></a></td>
-
+        <br>
+    </tr>
+    <tr th:each="records:${records}">
+        <td id="col3"><a th:text="${records}"></a></td>
+        <br>
     </tr>
 </table>
 <oo>Carefully Styled Heading</oo>
