Added new functionality for working with local data of the regional database.(Update info from table Sybase.gai.arest to Postgres.rsc1840.arest)  19.04.2023

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -94,7 +94,7 @@
                         </li>
                     </ul>
                 </li>
-                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/karta/arestupdate">Test2</a></li>
+                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/karta/arestupdate">Арест</a></li>
 
             </ul>
         </nav>
