Added new functionality for working with local data of the regional database.(Update info from table Sybase.gai.arest to Postgres.rsc1840.arest)  12.05.2023

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -3,8 +3,7 @@
 <head>
     <title th:text="${title}"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" >-->
-    <!--    <link rel="stylesheet" href="main.css">-->
+
 </head>
 <body data-hasqtip="0">
 
@@ -15,30 +14,25 @@
     </symbol>
 </svg>
 
-<!--<div class="container py-3">-->
 <div>
     <header th:insert="blocks/header.html :: header"></header>
 
     <main>
-        <!--        <section class="py-5 text-center container">-->
-        <!--        <section >-->
-        <!--            <div class="row py-lg-0">-->
-        <!--                <div class="col-lg-6 col-md-25 mx-auto">-->
         <div>
             <h1 class="fw-light">Невеличка інструкція</h1>
             <a> Довідки про відсутність/наявність судимості</a>
             <a>1. Довідки щоденні :</a>
-            <a> - при відкритті цієї сторінки автоматично виконується пошук з початку тижня по день відкритя сторінки та
-                Вашого ТСЦ.</a>
-            <a> - якщо внесено помилкові данні потрібно лівою кнопкою миші клацнути на заголовку помилково внесеного дня
-                відкриється вікно для корегування.</a>
-            <a> За необхідності відкорегували та зберегти зміни. Відкорегована інформація з^явиться в пошуку</a>
-            <a>2. Для формування тижневого звіту в пошуковому вікні вибрати своє ТСЦ та за який період сформувати звіт
-                та натиснути "Формування та друк тижневого звіту"</a>
-            <a> На Вашу електронну адресу прийде сформований звіт.</a>
-            <a>2. Звіт щоденний - заповнюється щодня, підрозділ ТСЦ та дата вноситься автоматично, є можливість змінити
-                дату </a>
-            <p class="lead text-muted"> .</p>
+            <h5> - при відкритті цієї сторінки автоматично виконується пошук з початку тижня по день відкритя сторінки та
+                Вашого ТСЦ.</h5>
+            <h5> - якщо внесено помилкові данні потрібно лівою кнопкою миші клацнути на заголовку помилково внесеного дня
+                відкриється вікно для корегування.</h5>
+            <h5> За необхідності відкорегували та зберегти зміни. Відкорегована інформація з'явиться в пошуку</h5>
+            <h5>2. Для формування тижневого звіту в пошуковому вікні вибрати своє ТСЦ та за який період сформувати звіт
+                та натиснути "Формування та друк тижневого звіту"</h5>
+            <h5> На Вашу електронну адресу прийде сформований звіт.</h5>
+            <h5>2. Звіт щоденний - заповнюється щодня, підрозділ ТСЦ та дата вноситься автоматично, є можливість змінити
+                дату </h5>
+            <h5 class="lead text-muted"> .</h5>
             <p>
                 <a href="#" class="btn btn-primary my-2">1</a>
                 <!--                        <a href="../printer/toppan" class="btn btn-secondary my-2">2</a>-->
