--- a/src/main/resources/templates/karta/historearest.html
+++ b/src/main/resources/templates/karta/historearest.html
@@ -142,7 +142,10 @@
                 <p> Рай: <b th:text="${AmtHyst.getRajon}?:''"> </b></p>
                 <p> МістоСело: <b th:text="${AmtHyst.getCity}?:''"> </b></p>
 
-                <p> вул: <b th:text="${AmtHyst.getStreet}?:''"> </b></p>
+<!--                <span th:text="${kart.getFamily}?: ''">-</span>-->
+                <p> вул: <b th:text="${AmtHyst.getStreet}?:''"> </b>
+
+                </p>
                 <p> буд: <b th:text="${AmtHyst.getHouse}?:''"> </b></p>
                 <p> кв.: <b th:text="${AmtHyst.getKv}?:''"> </b></p>
                 <p> Примітка: <b th:text="${AmtHyst.getAnnot}?:''"> </b></p>
