--- a/src/main/resources/templates/static/css/cssandjs.css
+++ b/src/main/resources/templates/static/css/cssandjs.css
@@ -5,11 +5,14 @@
     color: brown;
 }
 
-strong {
+.strong {
     font-weight: 700;
     background-color: yellow;
 }
 
-p {
+.p {
     font-family: sans-serif;
+}
+.c{
+    color: blue;
 }
