Added new functionality for working with local data of the regional database.(Update info from table Sybase.gai.arest to Postgres.rsc1840.arest)  25.05.2023

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -22,12 +22,12 @@
             <h1 class="fw-light">Невеличка інструкція</h1>
             <a> Довідки про відсутність/наявність судимості</a>
             <a>1. Довідки щоденні :</a>
-            <h5> - при відкритті цієї сторінки автоматично виконується пошук з початку тижня по день відкритя сторінки та
+            <h5> - при відкритті цієї сторінки автоматично виконується пошук з початку тижня по день відкритя сторінки
                 Вашого ТСЦ.</h5>
             <h5> - якщо внесено помилкові данні потрібно лівою кнопкою миші клацнути на заголовку помилково внесеного дня
                 відкриється вікно для корегування.</h5>
-            <h5> За необхідності відкорегували та зберегти зміни. Відкорегована інформація з'явиться в пошуку</h5>
-            <h5>2. Для формування тижневого звіту в пошуковому вікні вибрати своє ТСЦ та за який період сформувати звіт
+            <h5> За необхідності відкорегували та зберегти зміни. Відкорегована інформація відразу відобразиться.</h5>
+            <h5>2. Для формування тижневого звіту в пошуковому вікні вибрати своє ТСЦ, вказати період формування звіту
                 та натиснути "Формування та друк тижневого звіту"</h5>
             <h5> На Вашу електронну адресу прийде сформований звіт.</h5>
             <h5>2. Звіт щоденний - заповнюється щодня, підрозділ ТСЦ та дата вноситься автоматично, є можливість змінити
