--- a/src/main/resources/templates/karta/arestupdate.html
+++ b/src/main/resources/templates/karta/arestupdate.html
@@ -30,4 +30,9 @@
 <!--<oo>Carefully Styled Heading</oo>-->
 <h5>Sync table "arest" completed</h5>
 </body>
+<div>
+    <form action="/logout" method="post">
+        <input type="submit" value="Sign Out"/>
+    </form>
+</div>
 </html>
