Added new functionality for working with local data of the regional database.(Security)  28.06.2023

--- a/src/main/resources/templates/karta/history.html
+++ b/src/main/resources/templates/karta/history.html
@@ -7,8 +7,8 @@
     <title>History</title>
 
     <style type="text/css">
-        <
-        style >
+        /*<*/
+        /*style >*/
         .hystory {
             width: 50%; /* ширина элемента */
             display: flex;
@@ -115,7 +115,7 @@
             <tr class="tr2">
                 <th class="th2">Арест</th>
                 <th class="th2"><a th:text="${AmtArest.getWho_na}"></a></th>
-                <th class="th2">Дата арест</th>
+                <th class="th2">Дата ареста</th>
             </tr>
         </table>
     </div>
