--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -13,15 +13,16 @@
         <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"></path>
     </symbol>
 </svg>
-<div>
-    <form action="/logout" method="post">
-        <input type="submit" value="Sign Out"/>
-    </form>
-</div>
+<!--<div>-->
+<!--    <form action="/logout" method="post">-->
+<!--        <input type="submit" value="Sign Out"/>-->
+<!--    </form>-->
+<!--</div>-->
 <div>
     <header th:insert="blocks/header.html :: header"></header>
 
     <main>
+
         <div>
             <h1 class="fw-light">Невеличка інструкція</h1>
             <a> Довідки про відсутність/наявність судимості</a>
