--- a/src/main/resources/templates/karta/searchKarta.html
+++ b/src/main/resources/templates/karta/searchKarta.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Title3666</title>
 <!--    <link rel="stylesheet" href="../static/resources/css/ext-all.css"/>-->
-    <script type="text/javascript" src="../static/ext-debug.js"></script>
+<!--    <script type="text/javascript" src="../static/ext-debug.js"></script>-->
 <!--    <script type="text/javascript" src="../../../resources/ext-theme-neptune.js"></script>-->
-    <script type="text/javascript" src="../static/app.js"></script>
+<!--    <script type="text/javascript" src="../static/app.js"></script>-->
 </head>
 <body>
 
