--- a/src/main/resources/templates/karta/searchAMT.html
+++ b/src/main/resources/templates/karta/searchAMT.html
@@ -46,7 +46,10 @@
     <label for="sec_name">По батькові</label>
     <input style="margin-left: 87px" class="tab" type="text" th:field="*{sec_name}" id="sec_name"/>
     <br/>
-
+    <label for="data_bor">Дата народження :</label>
+<!--    <input style="margin-left: 87px" name="data_bor" class="tab" type="date" th:value="${data_bor}" id="data_bor"/>-->
+    <input style="margin-left: 87px" name="data_bor" class="tab" type="date" th:text="*{born}" id="data_bor"/>
+<!--    th:text="${data_bor} ? '1900-01-01' : '1901-02-02'"-->
     <br/>
     <label for="pasport">ІПН/ЄДРПОУ</label>
     <input style="margin-left: 74px" class="tab" type="text" th:field="*{pasport}" id="pasport"/>
