--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -77,8 +77,8 @@
         <nav class="d-inline-flex mt-0 mt-md-0 ms-md-auto">
             <!--            <ul class="menu">-->
             <ul>
-                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">...</a></li>
-                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/karta/searchAMT">Компан</a></li>
+                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">About</a></li>
+
 <!--                                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">Toppan CP 500</a>-->
 <!--                                    <ul class="submenu">-->
 <!--                                        <li><a class="me-3 py-2 text-dark text-decoration-none" href="/printer/toppan">Принтера</a>-->
@@ -102,6 +102,8 @@
                         </li>
                     </ul>
                 </li>
+
+                <li><a class="me-3 py-2 text-dark text-decoration-none" href="/karta/searchAMT">Компан</a></li>
 
                 <li><a class="me-3 py-2 text-dark text-decoration-none" href="/">АрешТ</a>
                     <ul class="submenu">
