--- a/src/main/resources/templates/karta/viewKarta.html
+++ b/src/main/resources/templates/karta/viewKarta.html
@@ -50,9 +50,9 @@
 <body>
 <header th:insert="blocks/header.html :: header"></header>
 <div>
-    <table>
+    <table><p th:text="${' Записів : ' + kartaSize}" ></p>
         <tr>
-            <p th:text="${' Записів : ' + kartaSize}" ></p>
+
             <th>Дата операции</th>
             <th>VIN / ДНЗ / свідоцтво</th>
             <th>Марка модель </th>
