Added new functionality for working with local data of the regional database.(Security)  13.07.2023 1 st.

--- a/src/main/resources/templates/karta/historearest.html
+++ b/src/main/resources/templates/karta/historearest.html
@@ -121,7 +121,9 @@
                 <p> Колір ТЗ: <b th:text="${AmtHyst.getColor}?:''"> </b></p>
                 <p> Тип ТЗ: <b th:text="${AmtHyst.getTip}?:''"> </b></p>
                 <p> Тип кузова: <b th:text="${AmtHyst.getCuzov}?:''"> </b></p>
-
+                <p> Вл. маса: <b th:text="${AmtHyst.getMasa1}?:''"> </b></p>
+                <p> Пов.маса: <b th:text="${AmtHyst.getMasa}?:''"> </b></p>
+                <p> Місць: <b th:text="${AmtHyst.getPlace}?:''"> </b></p>
             </td>
 
             <td id="col_3">
