--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -39,7 +39,7 @@
                 дату </h5>
             <h5 class="lead text-muted"> .</h5>
             <p>
-                <a href="#" class="btn btn-primary my-2">1</a>
+                <a href="#" class="btn btn-primary my-2">З пропозиціями звертайтесь до розробника - Климчука Олега</a>
                 <!--                        <a href="../printer/toppan" class="btn btn-secondary my-2">2</a>-->
             </p>
         </div>
