--- a/src/main/resources/templates/karta/historearest.html
+++ b/src/main/resources/templates/karta/historearest.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:оБ="http://www.w3.org/1999/xhtml"
+
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <!--    <head>-->
+
     <title>Історія && Арест АМТ</title>
-    <link rel="stylesheet" th:href="@{css/login_css.css}">
-    <!--    </head>-->
+    <link rel="stylesheet" th:href="@{css/cssandjs.css}">
 
     <title>Історія && Арест </title>
 
@@ -17,9 +16,9 @@
             padding: 0;
         }
 
-        p {
-            padding: 1px;
-        }
+        /*p {*/
+        /*    padding: 1px;*/
+        /*}*/
 
         #left {
             position: absolute;
@@ -58,7 +57,7 @@
         }
 
         #col_2 {
-            width: 5%; /* Ширина второй  колонки */
+            width: 7%; /* Ширина второй  колонки */
             background: #fcfbfb; /* Цвет фона третьей колонки */
         }
 
@@ -69,7 +68,7 @@
 
         #col_4 {
             width: 21%; /* Ширина первой колонки */
-            background: rgba(250, 248, 248, 0.87); /* Цвет фона первой колонки */
+            background: rgba(250, 248, 248, 0.87); /* Солір фона первой колонки */
         }
 
         b {
@@ -77,7 +76,7 @@
         }
 
         #col_a {
-            background: rgba(236, 190, 190, 0.87); /* Цвет фона первой колонки */
+            background: rgba(236, 190, 190, 0.87); /* Солір фона первой колонки */
         }
 
         p.a {
@@ -106,7 +105,6 @@
         </tr>
         <tr th:each="AmtHyst:${Amthystory}">
             <td id="col_1">
-
                 <p> Марка : <b th:text="${AmtHyst.getMarka}?: ''"> </b></p>
                 <p> ДНЗ : <b th:text="${AmtHyst.getZnak}?: ''"> </b></p>
                 <p> СпР : <b th:text="${AmtHyst.getTeh_pasp}?: ''"> </b></p>
@@ -116,17 +114,15 @@
                 <p> Vin : <b th:text="${AmtHyst.getKart_id}?: ''"> </b></p>
             </td>
             <td id="col_2">
-
-                <p> м³ : <b th:text="${AmtHyst.getVolume}?: ''"> </b></p>
-                <p> Двер: <b th:text="${AmtHyst.getDoor}?: ''"> </b></p>
-                <p> Пал : <b th:text="${AmtHyst.getFuel}?:''"> </b></p>
-                <p> Колір ТЗ: <b th:text="${AmtHyst.getColor}?:''"> </b></p>
                 <p> Тип ТЗ: <b th:text="${AmtHyst.getTip}?:''"> </b></p>
                 <p> Тип кузова: <b th:text="${AmtHyst.getCuzov}?:''"> </b></p>
+                <p> Місць: <b th:text="${AmtHyst.getPlace}?:''"> </b></p>
+                <p> Двер: <b th:text="${AmtHyst.getDoor}?: ''"> </b></p>
+                <p> Колір ТЗ: <b th:text="${AmtHyst.getColor}?:''"> </b></p>
+                <p> Пал : <b th:text="${AmtHyst.getFuel}?:''"> </b></p>
+                <p> Двиг. м³ : <b th:text="${AmtHyst.getVolume}?: ''"> </b></p>
                 <p> Вл. маса: <b th:text="${AmtHyst.getMasa1}?:''"> </b></p>
                 <p> Пов.маса: <b th:text="${AmtHyst.getMasa}?:''"> </b></p>
-                <p> Місць: <b th:text="${AmtHyst.getPlace}?:''"> </b></p>
-
             </td>
 
             <td id="col_3">
@@ -144,16 +140,11 @@
                 <p> Обл: <b th:text="${AmtHyst.getObl}?:''"> </b></p>
                 <p> Рай: <b th:text="${AmtHyst.getRajon}?:''"> </b></p>
                 <p> МістоСело: <b th:text="${AmtHyst.getCity}?:''"> </b></p>
-
-<!--                <span th:text="${kart.getFamily}?: ''">-</span>-->
-                <p> вул: <b th:text="${AmtHyst.getStreet}?:''"> </b>
-
-                </p>
+                <p> вул: <b th:text="${AmtHyst.getStreet}?:''"> </b>  </p>
                 <p> буд: <b th:text="${AmtHyst.getHouse}?:''"> </b></p>
                 <p> кв.: <b th:text="${AmtHyst.getKv}?:''"> </b></p>
                 <p> Примітка: <b th:text="${AmtHyst.getAnnot}?:''"> </b></p>
             </td>
-
         </tr>
     </table>
 </div>
