--- a/src/main/resources/templates/karta/searchAMT.html
+++ b/src/main/resources/templates/karta/searchAMT.html
@@ -5,7 +5,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Пошук по регіональній автоматизованій базі АМТ</title>
-    <link th:href="@{/css/style.css}" rel="stylesheet"/>
+    <link th:href="@{/templates/css/style.css}" rel="stylesheet"/>
 
 </head>
 <body>
