Added new functionality for working with local data of the regional database.(Security)  14.07.2023

--- a/src/main/resources/templates/karta/historearest.html
+++ b/src/main/resources/templates/karta/historearest.html
@@ -10,7 +10,8 @@
 
     <title>Історія && Арест </title>
 
-    <style type="text/css">
+<!--    <style type="text/css">-->
+    <style >
         * {
             margin: 0;
             padding: 0;
