--- a/src/main/resources/templates/karta/historearest.html
+++ b/src/main/resources/templates/karta/historearest.html
@@ -86,12 +86,12 @@
             /*margin-bottom: 1em; !* Отступ снизу *!*/
         }
 
-        p.b {
-            margin: 1px 0;
-            color: #6f93dc;
-            font-style: italic;
-            font-weight: bold;
-        }
+        /*p.b {*/
+        /*    margin: 1px 0;*/
+        /*    color: #6f93dc;*/
+        /*    font-style: italic;*/
+        /*    font-weight: bold;*/
+        /*}*/
 
     </style>
 </head>
