--- a/src/main/resources/templates/karta/historearest.html
+++ b/src/main/resources/templates/karta/historearest.html
@@ -108,6 +108,7 @@
             <td id="col_1">
                 <p> Марка : <b th:text="${AmtHyst.getMarka}?: ''"> </b></p>
                 <p> ДНЗ : <b th:text="${AmtHyst.getZnak}?: ''"> </b></p>
+                <p> Рік вип : <b th:text="${AmtHyst.getData_v}?: ''"> </b></p>
                 <p> СпР : <b th:text="${AmtHyst.getTeh_pasp}?: ''"> </b></p>
                 <p> Рік вип : <b th:text="${AmtHyst.getData_v}?: ''"> </b></p>
                 <p> № Куз : <b th:text="${AmtHyst.getNum_cuz}?: ''"> </b></p>
