--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -58,7 +58,7 @@
 
         <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
 
-            <span class="fs-3">РСЦ ГСЦ МВС в Житомирській області.
+            <span class="fs-3">РСЦ ГСЦ МВС в Житомирській області.,
 
                 <!--                Today in Zhytomyr:-->
                 <!--                <span-->
