--- a/src/main/resources/templates/karta/historearest.html
+++ b/src/main/resources/templates/karta/historearest.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
     <title>Історія && Арест АМТ</title>
-    <link rel="stylesheet" th:href="@{css/cssandjs.css}">
+    <link rel="stylesheet" th:href="@{../static/css/cssandjs.css}">
 
     <title>Історія && Арест </title>
 
